# sh_runner_daemon

./: Makefile  README.md  config.py  docker-compose-local.yml  install.sh  installer.py  prometheus.yml  pyproject.toml  uninstall.sh
service/: logger.py  logging.conf  main.py  meta.py
system_templates/: sh_runner_app.j2
