[tool.poetry]
name = "sh-runner-daemon"
version = "0.1.0"
description = "Unix daemon to run sh commands on host"
authors = ["quantumwaffy <sashchystyh@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sh = "^2.0.6"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
